[package]
name = "server"
version = "0.1.0"
authors = ["Hassan Ali <shali@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
amiquip = "0.3.3"
raytracer = { path = ".."}
serde_json = "1.0.57"